{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 51,
  "lineage": "6a6b374f-1038-0e4f-d91f-d6be21a0131b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da7408e845aded67",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:elastic-ip/eipalloc-0da7408e845aded67",
            "association_id": "eipassoc-07a2b6d419344f9a0",
            "domain": "vpc",
            "id": "eipalloc-0da7408e845aded67",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a615a324cd26e18e",
            "private_dns": "ip-10-0-1-90.ap-south-1.compute.internal",
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-13-206-227-134.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.227.134",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-nat-eip",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            }
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "consumer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e8e63035c905918",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:instance/i-037f51043ee270d8d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kafka-project-consumer-profile",
            "id": "i-037f51043ee270d8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "kafka-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f0cec69be6a047b1"
              }
            ],
            "primary_network_interface_id": "eni-0f0cec69be6a047b1",
            "private_dns": "ip-10-0-2-98.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.98",
            "public_dns": "ec2-43-204-114-13.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.114.13",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Owner": "DataEngineering",
                  "Project": "kafka-project"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Owner": "DataEngineering",
                  "Project": "kafka-project"
                },
                "throughput": 125,
                "volume_id": "vol-03ab8107888677cb3",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028dbff0ba4005993",
            "tags": {
              "Name": "consumer"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "consumer",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f67e3ee530fda82"
            ]
          },
          "dependencies": [
            "aws_cloudwatch_log_group.msk",
            "aws_iam_instance_profile.consumer",
            "aws_iam_role.consumer",
            "aws_key_pair.kafka",
            "aws_kms_key.msk",
            "aws_msk_cluster.cluster",
            "aws_msk_configuration.config",
            "aws_security_group.consumer",
            "aws_security_group.msk",
            "aws_security_group.producer",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "tls_private_key.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e8e63035c905918",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:instance/i-0c505c44afcb2a785",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kafka-project-producer-profile",
            "id": "i-0c505c44afcb2a785",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "kafka-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04b047e5ffdc4458c"
              }
            ],
            "primary_network_interface_id": "eni-04b047e5ffdc4458c",
            "private_dns": "ip-10-0-1-126.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-13-206-250-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.250.135",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Owner": "DataEngineering",
                  "Project": "kafka-project"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Owner": "DataEngineering",
                  "Project": "kafka-project"
                },
                "throughput": 125,
                "volume_id": "vol-07572a5c0f8419c7d",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016ad12d5eb3a8a92",
            "tags": {
              "Name": "producer"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "producer",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a500769ea2f6ac98"
            ]
          },
          "dependencies": [
            "aws_cloudwatch_log_group.msk",
            "aws_iam_instance_profile.producer",
            "aws_iam_role.producer",
            "aws_key_pair.kafka",
            "aws_kms_key.msk",
            "aws_msk_cluster.cluster",
            "aws_msk_configuration.config",
            "aws_security_group.consumer",
            "aws_security_group.msk",
            "aws_security_group.producer",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "tls_private_key.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:internet-gateway/igw-0c1149799982274de",
            "id": "igw-0c1149799982274de",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-igw",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da7408e845aded67",
            "association_id": "eipassoc-07a2b6d419344f9a0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ee869efeaccf266e",
            "network_interface_id": "eni-0a615a324cd26e18e",
            "private_ip": "10.0.1.90",
            "public_ip": "13.206.227.134",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-016ad12d5eb3a8a92",
            "tags": {
              "Name": "kafka-project-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-nat",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:route-table/rtb-06cb2c12323b68a3d",
            "id": "rtb-06cb2c12323b68a3d",
            "owner_id": "741448939728",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ee869efeaccf266e",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-project-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-private-rt",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:route-table/rtb-0e1c995189d76941d",
            "id": "rtb-0e1c995189d76941d",
            "owner_id": "741448939728",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1149799982274de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-project-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-public-rt",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047cf60e3346b9c3d",
            "region": "ap-south-1",
            "route_table_id": "rtb-06cb2c12323b68a3d",
            "subnet_id": "subnet-01867a0c060fd96d4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c158102cb69b6a6a",
            "region": "ap-south-1",
            "route_table_id": "rtb-06cb2c12323b68a3d",
            "subnet_id": "subnet-033a65c069d020afc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0d3365799ba5141",
            "region": "ap-south-1",
            "route_table_id": "rtb-06cb2c12323b68a3d",
            "subnet_id": "subnet-04b060c7e4fc509ca"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2f0a41a1e835973",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e1c995189d76941d",
            "subnet_id": "subnet-016ad12d5eb3a8a92"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ddc0aac32994c2e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e1c995189d76941d",
            "subnet_id": "subnet-028dbff0ba4005993"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consumer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-06f67e3ee530fda82",
            "description": "Consumer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f67e3ee530fda82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kafka-project-consumer-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-project-consumer-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-consumer-sg",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-02cf5d1c040222da2",
            "description": "MSK Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cf5d1c040222da2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f67e3ee530fda82",
                  "sg-0a500769ea2f6ac98"
                ],
                "self": false,
                "to_port": 9098
              }
            ],
            "name": "kafka-project-msk-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-project-msk-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-msk-sg",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consumer",
            "aws_security_group.producer",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-0a500769ea2f6ac98",
            "description": "Producer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a500769ea2f6ac98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kafka-project-producer-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-project-producer-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-producer-sg",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-01867a0c060fd96d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01867a0c060fd96d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-private-1",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-private-1",
              "Owner": "DataEngineering",
              "Project": "kafka-project",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-033a65c069d020afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033a65c069d020afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-private-2",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-private-2",
              "Owner": "DataEngineering",
              "Project": "kafka-project",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-04b060c7e4fc509ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b060c7e4fc509ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-private-3",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-private-3",
              "Owner": "DataEngineering",
              "Project": "kafka-project",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-016ad12d5eb3a8a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ad12d5eb3a8a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-public-1",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-public-1",
              "Owner": "DataEngineering",
              "Project": "kafka-project",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-028dbff0ba4005993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028dbff0ba4005993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-public-2",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-public-2",
              "Owner": "DataEngineering",
              "Project": "kafka-project",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01a52b06d31a984bc"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:vpc/vpc-01a52b06d31a984bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021936f3cfeda84e9",
            "default_route_table_id": "rtb-0003548f47c06ce17",
            "default_security_group_id": "sg-0734d62e821b1f2c4",
            "dhcp_options_id": "dopt-001d54595cb380f65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a52b06d31a984bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0003548f47c06ce17",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-project-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kafka-project-vpc",
              "Owner": "DataEngineering",
              "Project": "kafka-project"
            }
          }
        }
      ]
    }
  ]
}